--- a/assets/css/_btns.pcss
+++ b/assets/css/_btns.pcss
@@ -28,19 +28,19 @@
   }
 
   .imdb-btn {
-      font: 2em/1 Impact, HelveticaNeue-CondensedBold, sans-serif;
-      color: #000;
-      text-shadow: 0 0 .15em #fff;
-      text-decoration: none;
+    font: 2em/1 Impact, HelveticaNeue-CondensedBold, sans-serif;
+    color: #000;
+    text-shadow: 0 0 0.15em #fff;
+    text-decoration: none;
 
-      display: inline-block;
-      vertical-align: bottom;
-      padding: .25em .35em;
-      border-radius: .15em;
-      background: radial-gradient(#ffffb8, #ce981d);
+    display: inline-block;
+    vertical-align: bottom;
+    padding: 0.25em 0.35em;
+    border-radius: 0.15em;
+    background: radial-gradient(#ffffb8, #ce981d);
 
-      &:hover {
-        background: radial-gradient(lighten(#ffffb8, 10%), lighten(#ce981d, 10%));
-      }
+    &:hover {
+      background: radial-gradient(lighten(#ffffb8, 10%), lighten(#ce981d, 10%));
+    }
   }
 }
